Update redirect URL in index.html for correct app source loading

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Refresh"
-      content="0; url='https://therealfoxster.github.io/altsource-viewer/view/?source=https://raw.githubusercontent.com/alextay-ideagen/altextay-ideagen.github.io/main/apps.json'"
+      content="0; url='https://alextay-ideagen.github.io/altsource-viewer/view/?source=https://raw.githubusercontent.com/alextay-ideagen/altextay-ideagen.github.io/main/apps.json'"
     />
     <title>Alex Tay's AltSource</title>
   </head>
